--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.45.1",
+    "@wagmi/cli": "^2.1.10",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "viem": "~2.16.0",
     "wagmi": "^2.10.4"
   },
@@ -20,6 +22,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.12.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
